# ODaX-Open-Data-eXplorer

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  airquality_healthinsurancefees.py  pyproject.toml  run_GeocoordinateTransformation.py  run_Openweathermap.py  run_openweathermap.py
.github/workflows/: ci.yml
analysis/: airquality_healthinsurancefees.py
data/healthinsurance/: BagNr_Mapping_KV.xlsx  praemienregionen-ab-2025.xlsx
data/nabel/: stations.csv  stations_with_wgs84.csv  stations_with_wgs84_with_pollution.csv
data/nabel/historical_data/: CO.csv  CPC.csv  EC.csv  NMVOC.csv  NO2.csv  NOX.csv  O3.csv  PM10.csv  PM2.5.csv  PREC.csv  RAD.csv  SO2.csv  TEMP.csv
imping/: __init__.py
imping/healthinsurance/: __init__.py  getFees.py  lib_healthinsurance.py
imping/meteoswiss/: __init__.py  getStations.py
imping/nabel_airquality/: __init__.py  airiq.md  lib_geocoordinates.py  lib_openweathermap.py  nabel_reverseengineering.py  openweathermap.py  run_GeocoordinateTransformation.py
tests/: test_lib_geocoordinates.py  test_lib_healthinsurance.py  test_lib_openweathermap.py
