[project]
name = "odax-open-data-explorer"
version = "0.1.0"
description = "Open data explorer."
authors = [
    {name = "Stephanie Mehltretter"},
    {name = "Justin MacPherson"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
